--- a/module7.css
+++ b/module7.css
@@ -741,6 +741,7 @@ margin-top: 30px;
 
 .burger {
     display: block;
+    cursor: pointer;
 }
 
 nav {
@@ -797,6 +798,7 @@ text-decoration: none;
     align-items: flex-end;
     display: flex;
     justify-content: flex-end;
+    cursor: pointer;
 }
 
 .about {
